# artificaldrone

catkin_ws/: maze.sh  readME.txt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
catkin_ws/devel/include/hector_uav_msgs/: Altimeter.h  AttitudeCommand.h  Compass.h  ControllerState.h  EnableMotorsRequest.h  EnableMotorsResponse.h  HeadingCommand.h  HeightCommand.h  LandingAction.h  LandingActionFeedback.h  LandingActionGoal.h  LandingActionResult.h  LandingFeedback.h  LandingGoal.h  LandingResult.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PoseAction.h  PoseActionFeedback.h  PoseActionGoal.h  PoseActionResult.h  PoseFeedback.h  PoseGoal.h  PoseResult.h  PositionXYCommand.h  RC.h  RawImu.h  RawMagnetic.h  RawRC.h  RuddersCommand.h  ServoCommand.h  Supply.h  TakeoffAction.h  TakeoffActionFeedback.h  TakeoffActionGoal.h  TakeoffActionResult.h  TakeoffFeedback.h  TakeoffGoal.h  TakeoffResult.h  (+4 more)
catkin_ws/devel/lib/hector_quadrotor_actions/: landing_action  pose_action  takeoff_action
catkin_ws/devel/lib/hector_quadrotor_pose_estimation/: hector_quadrotor_pose_estimation
catkin_ws/devel/lib/hector_quadrotor_teleop/: quadrotor_teleop
catkin_ws/devel/lib/pkgconfig/: autonomous_drone.pc  drone_control.pc  drone_description.pc  drone_gazebo.pc  hector_quadrotor_actions.pc  hector_quadrotor_controller_gazebo.pc  hector_quadrotor_controllers.pc  (+8 more)
catkin_ws/src/autonomous_drone/: CMakeLists.txt  package.xml
catkin_ws/src/drone/drone_description/: package.xml
simulation_ws/devel/tmp/: ardronelib-gitclone.cmake  ardronelib-gitupdate.cmake
(+173 files in other folders)
