<package>
  <name>drone_description</name>
  <version>0.3.5</version>
    <description>The drone_description package</description>

  <maintainer email="arslannazir999@gmail.com">Arslan Nazir</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hector_sensors_description</run_depend>

</package>
